# Psycho-Silicone-Subjects

./: .env.example  .gitignore  Dr Turing.ipynb  DrJekyll_and_Mr_Hyde_RAG.ipynb  README.md  pyproject.toml  requirements.txt
.rag_cache/: 56ec9ee16c72eebd.json  59b530086e4478d5.json  59b530086e4478d5.npy  86d42d7c255f5df8.json  86d42d7c255f5df8.npy  a05628c26e8c7477.json  a05628c26e8c7477.npy  a37e4c989bb06a53.json  b408520709108ffe.json  cc11004c35530f47.json  ee48f738e59d483c.npy  f1e88e95fb0aa36e.json
app/femandhousewife/: .env.example  .gitignore  README.md  requirements.txt
data/: chat_sessions.jsonl  memories.jsonl  memories_receiver.jsonl  persona.json  persona_receiver.json  shock_sessions.jsonl  shock_sessions_receiver.jsonl  web_chat_state.json
jekyllandhyde/: README.md  requirements.txt
jekyllandhyde/.rag_cache/: bd906c83652278f4.json  bd906c83652278f4.npy  ee48f738e59d483c.json  ee48f738e59d483c.npy
jekyllandhyde/app/: __init__.py  rag_engine.py  server.py
jekyllandhyde/web/: index.html
milgram_experiment/: .gitignore  README.md  requirements.txt
milgram_experiment/backend/: persona_adapters.py  server.py  session_store.py
milgram_experiment/web/: index.html
src/: code.py
src/ai_persona_sim/: __init__.py  cli.py  config.py  decision_engine.py  logging_utils.py  memory.py  models.py  persona_engine.py  prompting.py  provider_openai.py  web_app.py  web_app_v2.py
src/pico_chatgpt_bridge/: button_monitor.py  main.py  openai_client.py  pico_serial.py  prompting.py  (+1 more)
subject_chat/: .env.example  README.md  __init__.py  requirements.txt
(+221 files in other folders)
